<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/f_create_woman_edt_desc5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/desc5"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_desc4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_desc4"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_desc4" />

    <EditText
        android:id="@+id/f_create_woman_edt_desc4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/desc4"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_desc3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_desc3"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_desc3" />

    <EditText
        android:id="@+id/f_create_woman_edt_desc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/desc3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_desc2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_desc2"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_desc2" />

    <EditText
        android:id="@+id/f_create_woman_edt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/category"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_name"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_name"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_name" />

    <EditText
        android:id="@+id/f_create_woman_edt_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/place"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_category"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_category"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_category" />

    <EditText
        android:id="@+id/f_create_woman_edt_desc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/desc1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_place"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_place"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_place" />

    <EditText
        android:id="@+id/f_create_woman_edt_desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/desc2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_desc1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_desc1"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_desc1" />

    <EditText
        android:id="@+id/f_create_woman_edt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/f_create_woman_btn_save"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/f_create_woman_edt_desc5"
        app:layout_constraintStart_toStartOf="@+id/f_create_woman_edt_desc5"
        app:layout_constraintTop_toBottomOf="@+id/f_create_woman_edt_place"
        app:layout_constraintVertical_bias="0.806" />

</androidx.constraintlayout.widget.ConstraintLayout>